# Compiler

./: .gitignore  CMakeLists.txt  main.cpp
Source/: CMakeLists.txt  asmgen.cpp  asmgen.h  errors.cpp  errors.h  optimizer.cpp  optimizer.h  parser.cpp  parser.h  scanner.cpp  scanner.h  symbols.cpp  symbols.h  symtable.cpp  syntaxnodes.cpp  syntaxnodes.h  token.cpp  token.h
Tests/: CMakeLists.txt  a.out  moveTests.py  test.asm  test.in  test1.in  test2.asm
Tests/GeneratorTests/: CMakeLists.txt  test.py  test001.in  test002.in  test003.in  test004.in  test005.in  test006.in  test007.in  test008.in  test008.out  test009.in  test010.in  test011.in  test012.in  test013.in  test013.out  test014.in  test015.in  test016.in  test017.in  test018.in  test018.out  test019.in  test020.in  test021.in  test022.in  test023.in  test023.out  test024.in  test025.in  test026.in  test027.in  test028.in  test028.out  test029.in  test029.out  test030.in  test030.out  test031.in  (+41 more)
Tests/ParserDeclTests/: CMakeLists.txt  test000.in  test000.out  test001.in  test001.out  test002.in  test002.out  test003.in  test003.out  test004.in  test004.out  test005.in  test005.out  test006.in  test007.out  test008.in  test008.out  test009.in  test009.out  test010.out  test011.in  test011.out  test012.in  test012.out  test013.in  test013.out  test014.in  test014.out  test015.in  test015.out  test016.in  test016.out  test017.in  test017.out  test018.in  test018.out  test019.in  test019.out  test020.in  test020.out  (+110 more)
Tests/ParserExprTests/: CMakeLists.txt  test004.out  test005.out  test006.in  test006.out  (+57 more)
(+251 files in other folders)
